--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>Blood on the Clocktower Town Square</title>
+  <title>血染钟楼【世界树科技】</title>
   <link rel="apple-touch-icon" sizes="57x57" href="static/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="static/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="static/apple-icon-72x72.png">
@@ -31,12 +31,12 @@
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
   <meta name="author" content="Steffen Baumgart">
-  <meta property="og:site_name" content="Blood on the Clocktower Town Square"/>
+  <meta property="og:site_name" content="血染钟楼【世界树科技】"/>
   <meta property="og:image"
         content="https://bra1n.github.io/townsquare/static/apple-icon.png"/>
   <meta property="og:type" content="website"/>
   <meta property="og:description" content="A free, virtual Blood on the Clocktower Town Square and Grimoire to help you run (online) games both as a storyteller and player. Batteries included!"/>
-  <meta property="og:title" content="Blood on the Clocktower Town Square"/>
+  <meta property="og:title" content="血染钟楼【世界树科技】"/>
   <meta property="og:url" content="https://bra1n.github.io/townsquare/"/>
 </head>
 <body>
